gccida/g2/dw2_asm_output_addr
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_addr/src/dwarf2asm.c:656:35: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), label); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_addr/src/dwarf2asm.c:660:49: error: use of undeclared identifier 'stru_6F109F'
fprintf( asm_out_file, "\t%s ", ( const char *)&stru_6F109F._IO_save_end + 7); 
                                                ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_addr/src/obj/dwarf2asm.o] Error 1
